correcting error on smaller view port

--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,8 @@ p {
 @media (max-width:768px) {
     #projects{
         grid-template-columns:1fr;
+        justify-items: center;
+        justify-content: space-around;
     }
 }
 
